tests/fixtures/invalid/str_bitor_float.py
# Cannot bitwise OR Str and Float
x: float = "hello" | 1.0
